--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
         "cy:report": "cypress run"
       },
+  
+  "repository": {
+        "type": "git",
+        "url": "https://github.com/snanapaneni/AzureDevops.git"
+      },
+
   "author": "Sireesha",
   "license": "ISC",
   "devDependencies": {
