--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   
   "repository": {
         "type": "git",
-        "url": "https://github.com/snanapaneni/AzureDevops.git"
+        "url": "https://github.com/snanapaneni/cypress.git"
       },
 
   "author": "Sireesha",
